--- a/kuma/static/styles/includes/_vars.scss
+++ b/kuma/static/styles/includes/_vars.scss
@@ -132,7 +132,8 @@ $base-font-size: 18px;
 $tiny-font-size: 14px;
 
 $mobile-document-title-font-size: 32px;
-$mobile-h2-font-size: 32px;
+$mobile-h2-font-size: 28px;
+$collapse-trigger-mobile-font-size: 22px;
 
 /* bumps */
 $larger-font-size: $callout-font-size;
